# sigverse_unity_project

./: .gitignore  LICENSE  README.md
Licenses/: LICENSE.jp.txt  LICENSE.txt
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NetcodeForGameObjects.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
SIGVerseProject/: .gitignore  README.md
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/: package.xml
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/arm_v0/Materials/: white.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/base_v2/Materials/: gray.mat  white.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/hand_v0/: l_distal.dae  l_proximal.dae  palm.dae  r_proximal.dae
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/hand_v0/Materials/: No Name.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/hand_v0_hsr-project/: LICENSE.txt  l_distal.fbx  l_fingerprint.mat  l_proximal.fbx  r_fingerprint.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/head_v1/Materials/: microphone.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/sensors/Materials/: black.mat  rgbd.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/torso_v0/Materials/: white.mat
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/wrist_v0/: wrist_roll.dae
SIGVerseProject/Assets/SIGVerse/Models/Robot/HSR/hsr_meshes/wrist_v0/Materials/: Material_002.mat  gray.mat  white.mat
(+3833 files in other folders)
