<?xml version="1.0"?>
<package format="2">
  <name>hsr_meshes</name>
  <version>1.0.0</version>
  <description>3D mesh files for the Toyota HSR</description>

  <maintainer email="koji_terada@mail.toyota.co.jp">Koji Terada</maintainer>
  <maintainer email="akiyoshi_ochiai@tri.global">Akiyoshi Ochiai</maintainer>

  <license>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International Public License</license>

  <url type="website">None</url>

  <author>Yoshihiro Matsuda</author>
  <author>Toru Isobe</author>
  <author>Kunihiro Iwamoto</author>
  <author>Yutaro Takagi</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
